[tool.poetry]
name = "tui"
version = "0.1.0"
description = ""
authors = ["Leonardo Jacomussi <leonardojacomussi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.13.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.34"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.9"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-material-extensions = "^1.3.1"
jinja2 = "^3.1.4"
pymdown-extensions = "^10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=tui -vv"
post_test = "coverage html"